# rust-coin

./: .gitignore  Cargo.toml  Justfile  README.md
docs/: bitcoin-core-2-enhancements.md  bitcoin-cryptography-learning-guide.md  bitcoin-rust-project-plan.md  rust-bitcoin-project-setup.md
src/: main.rs
src/learning/: mod.rs  primitives.rs  wallet.rs
src/transaction/: database.rs  mod.rs  transaction.rs
